# dwarf

./: .gitignore  Cargo.toml  Makefile  README.md
assets/: dwarf.desktop  linux-install.sh  manual.txt
dwarf-desktop/: Cargo.toml  Makefile
dwarf-desktop/src/: main.rs  manual.rs
dwarf-vue/: .eslintrc.json  index.html  package-lock.json  package.json
dwarf-vue/src/: App.vue
dwarf-vue/src/components/: BillOptionTabs.vue  CalculatorWidget.vue  ResultModal.vue  ResultsBox.vue
dwarf-vue/src/components/icons/: CheckIcon.vue
dwarf-vue/src/utils/: bill-options.js  storage.js  tutorial.js
dwarf-vue/src/utils/dwarf/: dwarf_wasm.d.ts  dwarf_wasm.js  dwarf_wasm_bg.wasm
dwarf-wasm/: Cargo.toml  Makefile
dwarf-wasm/src/: lib.rs  native.rs
src/: app.rs  main.rs  utils.rs
web/dwarf-svelte/: package.json
web/dwarf-vue/: .eslintignore  index.html  package-lock.json  package.json  vite.config.js
web/dwarf-vue/src/: App.vue  main.js  store.js  style.css
web/dwarf-vue/src/components/: BillOptionTabs.vue  Calculator.vue  CalculatorWidget.vue  CancelIcon.vue  CheckIcon.vue  DollarIcon.vue  ResultCard.vue  ResultModal.vue  Results.vue  ResultsBox.vue  ResultsStorage.vue  ResultsTable.vue  Row.vue  Storage.vue  Tabs.vue
web/dwarf-vue/src/components/icons/: CancelIcon.vue  CheckIcon.vue  DollarIcon.vue
web/dwarf-vue/src/pkg/: dwarf_wasm.js  dwarf_wasm_bg.wasm
web/dwarf-vue/src/utils/: bill-options.js  storage.js  tutorial.js
web/dwarf-vue/src/utils/dwarf/: dwarf_wasm.d.ts  dwarf_wasm.js  dwarf_wasm_bg.wasm
