[package]
name = "dwarf"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
egui = "0.17.0"
#egui_glow = {version = "0.17.0", features = ["clipboard", "default_fonts", "links"]}
#glow = "0.11.2"
#glutin = "0.28.0"
eframe = "0.17.0"
native-dialog = "0.5.8"
chrono = "0.4.19"
image = "0.24.2"
