[package]
name = "dwarf-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rust_decimal = "1.30.0"
serde = { version = "1.0", features = ["derive"] }